Updated gradle build and now server libraries separate from modules.